chore: ➕ add `nativewind`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
+  "cSpell.words": ["nativewind"],
+  "files.associations": {
+    "src/global.css": "tailwindcss"
+  },
   "typescript.tsdk": "node_modules/typescript/lib"
 }
