--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sd-quick",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -42,6 +42,8 @@
     "@types/node": "^20.14.0",
     "@types/react": "~18.3.12",
     "@types/react-dom": "~18.3.1",
+    "nativewind": "^4.1.23",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   },
   "private": true
