--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
   "name": "sd-quick",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "tsc --noEmit",
-    "preview": "vite preview"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "expo lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.50.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.371.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@tanstack/react-query": "^5.66.0",
+    "expo": "~52.0.31",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.5",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
-    "@types/chrome": "^0.0.268",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+    "@babel/core": "^7.25.2",
+    "@types/chrome": "^0.0.301",
+    "@types/node": "^20.14.0",
+    "@types/react": "~18.3.12",
+    "@types/react-dom": "~18.3.1",
+    "typescript": "^5.7.3"
+  },
+  "private": true
 }
