--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "main": "expo-router/entry",
   "version": "0.1.0",
   "scripts": {
+    "deploy:prod": "eas deploy --prod",
+    "deploy:preview": "eas deploy --alias preview",
+    "export:ext": "EXT=true expo export --platform web",
+    "export:web": "expo export --platform web --no-ssg",
     "start": "expo start",
+    "start:clean": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -42,6 +47,7 @@
     "@types/node": "^20.14.0",
     "@types/react": "~18.3.12",
     "@types/react-dom": "~18.3.1",
+    "eas-cli": "^15.0.5",
     "nativewind": "^4.1.23",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
