--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "description": "Quick actions for ShalaDarpan quirks",
   "permissions": ["activeTab", "contextMenus", "scripting"],
   "action": {
-    "default_popup": "index.html"
+    "default_popup": "server/index.html"
   },
   "background": {
     "type": "module",
