--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "deploy:prod": "eas deploy --prod",
     "deploy:preview": "eas deploy --alias preview",
-    "export:ext": "EXT=true expo export --platform web",
+    "export:ext": "expo export --platform web && (node scripts/extension-bundle.mjs & node scripts/extension-hacks.mjs)",
     "export:web": "expo export --platform web --no-ssg",
+    "ext:build": "node scripts/extension-bundle.mjs",
+    "ext:watch": "node scripts/extension-bundle.mjs",
     "start": "expo start",
     "start:clean": "expo start --clear",
     "android": "expo start --android",
@@ -48,6 +50,7 @@
     "@types/react": "~18.3.12",
     "@types/react-dom": "~18.3.1",
     "eas-cli": "^15.0.5",
+    "esbuild": "^0.25.0",
     "nativewind": "^4.1.23",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
