--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "extends": "expo/tsconfig.base",
+
   "compilerOptions": {
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "strict": true,
     "paths": {
       "~/*": ["./src/*"],
       "~/assets/*": ["./assets/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "nativewind-env.d.ts"]
+
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
+  ]
 }
