--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,10 @@
   "permissions": ["activeTab", "contextMenus", "scripting"],
   "content_scripts": [
     {
+      "js": ["scripts/global.js"],
+      "matches": ["https://rajshaladarpan.rajasthan.gov.in/*"]
+    },
+    {
       "js": ["scripts/staff-attendance.js"],
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/Staff_DailyAttendanceEntry.aspx"]
     },
