feat: ✨ try to make the session last forever

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "conventionalCommits.promptBody": false,
+  "conventionalCommits.promptFooter": false,
+  "conventionalCommits.promptScopes": false,
   "cSpell.words": ["nativewind"],
   "files.associations": {
     "src/global.css": "tailwindcss"
