--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,11 @@
     {
       "js": ["scripts/tc-list.js"],
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/SchoolTcReport.aspx"]
+    },
+    {
+      "js": ["scripts/window.js"],
+      "matches": ["https://rajshaladarpan.rajasthan.gov.in/*"],
+      "world": "MAIN"
     }
   ]
 }
