--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,10 @@
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*"]
     },
     {
+      "js": ["scripts/home.js"],
+      "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/Default.aspx"]
+    },
+    {
       "js": ["scripts/login.js"],
       "matches": [
         "https://rajshaladarpan.rajasthan.gov.in/*/OfficeLoginNew.aspx",
