--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,6 +23,10 @@
       "world": "MAIN"
     },
     {
+      "js": ["scripts/result-entry.js"],
+      "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/StudentAccess_MarksEnter_School.aspx"]
+    },
+    {
       "js": ["scripts/staff-attendance.js"],
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/Staff_DailyAttendanceEntry.aspx"]
     },
