--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,6 +31,11 @@
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/Staff_DailyAttendanceEntry.aspx"]
     },
     {
+      "js": ["scripts/student-daily-attendance.js"],
+      "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/StudentDailypresence.aspx"],
+      "world": "MAIN"
+    },
+    {
       "js": ["scripts/tc-list.js"],
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/SchoolTcReport.aspx"]
     },
