--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -40,6 +40,10 @@
       "world": "MAIN"
     },
     {
+      "js": ["scripts/student-profile.js"],
+      "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/SchoolStudentProfiles_New.aspx"]
+    },
+    {
       "js": ["scripts/tc-list.js"],
       "matches": ["https://rajshaladarpan.rajasthan.gov.in/*/SchoolTcReport.aspx"]
     },
