chore: 🚚 migrate to `wxt`

--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,34 @@
 # dependencies
 node_modules/
 
-# Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
+# Logs
+logs
+*.log
 
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# wxt
+.output
+stats.html
+stats-*.json
+.wxt
+web-ext.config.ts
 
-# Metro
-.metro-health-check*
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # debug
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+pnpm-debug.log*
+lerna-debug.log*
 
 # macOS
 .DS_Store
