--- a/package.json
+++ b/package.json
@@ -1,53 +1,30 @@
 {
   "name": "sd-quick",
-  "main": "expo-router/entry",
+  "description": "Quick actions for ShalaDarpan quirks",
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "ext:build": "node scripts/extension-bundle.mjs",
-    "ext:watch": "node scripts/extension-bundle.mjs",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+    "dev": "wxt",
+    "dev:firefox": "wxt -b firefox",
+    "build": "wxt build",
+    "build:firefox": "wxt build -b firefox",
+    "zip": "wxt zip",
+    "zip:firefox": "wxt zip -b firefox",
+    "compile": "tsc --noEmit",
+    "postinstall": "wxt prepare"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@tanstack/react-query": "^5.66.0",
-    "expo": "~52.0.31",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/chrome": "^0.0.301",
-    "@types/node": "^20.14.0",
-    "@types/react": "~18.3.12",
-    "@types/react-dom": "~18.3.1",
-    "esbuild": "^0.25.0",
-    "nativewind": "^4.1.23",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "@tailwindcss/vite": "^4.1.5",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "@wxt-dev/module-react": "^1.1.3",
+    "tailwindcss": "^4.1.5",
+    "typescript": "^5.8.3",
+    "wxt": "^0.20.6"
   },
   "private": true
 }
