--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@wxt-dev/auto-icons": "^1.0.2",
     "@wxt-dev/module-react": "^1.1.3",
     "conventional-changelog-conventionalcommits": "^9.0.0",
     "semantic-release": "^24.2.4",
