--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tesseract.js": "^6.0.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@semantic-release/exec": "^7.1.0",
